# py-tlgbotcore

./: .dockerignore  .env.example  .gitignore  Analyze.md  Analyze_old.md  Dockerfile  README.md  TODO.md  TODO_old.md  config-example.py  dev_start.py  docker-compose.yml  install_libs.sh  kaefikapp.session-journal  main.py  pyproject.toml  run_docker.sh  start_tlgbotcore.py  stop_and_clean_docker.sh
.github/workflows/: main.yml
bot/: __init__.py  start_tlgbotcore.py
bot/locales/: ba.json  ba_lat.json  en.json  ru.json  tt.json  tt_lat.json
bot/plugins_bot/inline_button/: inline_button.py
bot/plugins_bot/noauthbot/: noauthbot.py
bot/plugins_bot/privet/: privet.py
bot/plugins_bot/runner_questionnaire/: runner_questionnaire.py
bot/plugins_bot/runner_questionnaire_inline_button/: example.json  runner_questionnaire_inline_button.py
bot/plugins_bot/setlang/: setlang.py
bot/plugins_bot/start_cmd/: start_cmd.py
bot/tlgbotcore/: _core.py  di_container.py  i18n.py  i_utils.py  logging_config.py  models.py  storage_factory.py  tlgbotcore.py
bot/tlgbotcore/csvdbutils/: __init__.py  csvdbutils.py  start_test_csvdbutils.sh
bot/tlgbotcore/csvdbutils/csvdb/tests/: test_csvdb.py
bot/tlgbotcore/csvdbutils/tests/: test_settinguser.py
bot/tlgbotcore/sqliteutils/: sqliteutils.py
cfg/: config_tlg_example.py
examples/: di_usage_example.py
plugins_bot/: privet.py  youtube2mp3.py
plugins_bot/inline_button/: inline_button.py
plugins_bot/noauthbot/: noauthbot.py
plugins_bot/privet/: privet.py
plugins_bot/runner_questionnaire/: example.json  runner_questionnaire.md  runner_questionnaire.py
plugins_bot/runner_questionnaire_inline_button/: runner_questionnaire_inline_button.md
plugins_bot/start_cmd/: start_cmd.py
plugins_bot/youtube2mp3/: youtube2mp3.md  youtube2mp3.py
tlgbotcore/: _core.md  _core.py  tlgbotcore.py
tlgbotcore/csvdbutils/: csvdbutils.py
tlgbotcore/csvdbutils/csvdb/: csvdb.md  csvdb.py  table1
tlgbotcore/csvdbutils/csvdb/tests/: test_csvdb.py
tlgbotcore/csvdbutils/tests/: test_settinguser.py  test_user.py
tlgbotcore/sqliteutils/: sqliteutils.py
