[project]
name = "py-tlgbotcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.41.2",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
tlgbotcore = "bot.start_tlgbotcore:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "types-requests>=2.31.0",
    "icecream>=2.1.3",  # только для разработки
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # постепенно включим
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "icecream.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bot.plugins_bot.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "bot.tlgbotcore._core"
ignore_errors = true

[[tool.mypy.overrides]]
module = "bot.tlgbotcore.csvdbutils.csvdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tlgbotcore.csvdbutils.csvdb.csvdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "csvdbutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "csvdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bot.tlgbotcore.csvdbutils.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "bot.tlgbotcore.csvdbutils.csvdb.tests.*"
ignore_errors = true
